--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="app"></div>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
-    <script src="../dist/bundle.js" type='text/javascript'></script>
+    <script src="../dist/Bundle.js" type='text/javascript'></script>
 </body>
 
 </html>
