--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -5,13 +5,20 @@
     <meta charset="UTF-8" />
     <title>vCDAT</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/superhero/bootstrap.min.css" rel="stylesheet" integrity="sha384-88w0u/oucDSTE30ETLLIobzhT+bQ6CSsiqQyLZpwHvve89eqUA9F2Db6ST6jGRLx" crossorigin="anonymous">
-    <!-- <link href='./css/styles.css' rel="stylesheet"> -->
+
+    <link href='./css/Styles.css' rel="stylesheet">
 </head>
 
 <body>
     <div id="app"></div>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
+    <!-- <script type="text/javascript" src="https://golden-layout.com/files/latest/js/goldenlayout.js"></script> <!-- Golden Layout --> -->
     <script src="../dist/Bundle.js" type='text/javascript'></script>
+
+    <!-- Golden Layout -->
+    <!-- <link type="text/css" rel="stylesheet" href="https://golden-layout.com/files/latest/css/goldenlayout-base.css" />
+    <link type="text/css" rel="stylesheet" href="https://golden-layout.com/files/latest/css/goldenlayout-dark-theme.css" /> -->
+
 </body>
 
 </html>
