--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -10,6 +10,8 @@
 
 <body>
     <div id="app"></div>
+    <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/react/15.1.0/react.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/react/15.1.0/react-dom.min.js"></script> -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
     <script src="../dist/Bundle.js" type='text/javascript'></script>
 </body>
