--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -11,6 +11,8 @@
 
 <body>
     <div id="app"></div>
+    <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/react/15.1.0/react.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/react/15.1.0/react-dom.min.js"></script> -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
     <!-- <script type="text/javascript" src="https://golden-layout.com/files/latest/js/goldenlayout.js"></script> <!-- Golden Layout --> -->
     <script src="../dist/Bundle.js" type='text/javascript'></script>
@@ -18,6 +20,9 @@
     <!-- Golden Layout -->
     <!-- <link type="text/css" rel="stylesheet" href="https://golden-layout.com/files/latest/css/goldenlayout-base.css" />
     <link type="text/css" rel="stylesheet" href="https://golden-layout.com/files/latest/css/goldenlayout-dark-theme.css" /> -->
+
+    <link type="text/css" rel="stylesheet" href="./css/goldenlayout-base.css" />
+    <link type="text/css" rel="stylesheet" href="./css/goldenlayout-light-theme.css" />
 
 </body>
 
