--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -14,6 +14,10 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/react/15.1.0/react-dom.min.js"></script> -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
     <script src="../dist/Bundle.js" type='text/javascript'></script>
+
+    <link type="text/css" rel="stylesheet" href="./css/goldenlayout-base.css" />
+    <link type="text/css" rel="stylesheet" href="./css/goldenlayout-light-theme.css" />
+
 </body>
 
 </html>
