--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -22,6 +22,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     <script src="deps/jquery-ui.min.js" type='text/javascript'></script>
     <script src="deps/Bundle.js" type='text/javascript'></script>
+    <script src="http://localhost:8888/scripts/vcs.js" type="text/javascript"></script>
 
 </body>
 
