--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div id="app"></div>
-    <script src="http://{vcs_js_server}/vcs.js" type="text/javascript"></script>
+    <script src="http://localhost:9000/vcs.js" type="text/javascript"></script>
     <script type="text/javascript" src="deps/jquery-2.2.4.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     <script src="deps/jquery-ui.min.js" type='text/javascript'></script>
