Removes all cdns

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -4,9 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <title>vCDAT</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link href="deps/bootstrap.min.css" rel="stylesheet">
     <link href='deps/jquery-ui.min.css' rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href='deps/Styles.css' rel="stylesheet">
 </head>
 
@@ -14,7 +13,7 @@
     <div id="app"></div>
     <script src="http://{vcs_js_server}/vcs.js" type="text/javascript"></script>
     <script type="text/javascript" src="deps/jquery-2.2.4.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+    <script src="deps/bootstrap.min.js" type='text/javascript'></script>
     <script src="deps/jquery-ui.min.js" type='text/javascript'></script>
     <script src="deps/Bundle.js" type='text/javascript'></script>
 
